# site-reporter

./: .gitignore  PROJECT_CONTEXT.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.example  __init__.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  workflow.py
backend/app/assets/: Template_incident.docx
backend/app/core/: __init__.py  config.py
backend/app/models/: __init__.py  schemas.py
backend/app/routers/: __init__.py  pipeline.py
backend/app/services/: __init__.py  docx_generator.py  llm.py  report.py  stt.py  template.py
backend/tests/: test_template.py
frontend/: .env.example  app.py  app_en_backup.py  pyproject.toml
frontend/.streamlit/: config.toml
frontend/services/: __init__.py  api.py
tests/: conftest.py
tests/integration/: test_azure_integration.py
